# MDA_demos

./: .gitignore  CMakeLists.txt  README.md  environment.yaml  linking_with_a_c_library.ipynb  neural_network.cpp  neural_network.h  use_mda_with_cython.ipynb
